adds footer and updates CSS for images

--- a/code/index.html
+++ b/code/index.html
@@ -43,6 +43,8 @@
     <!-- source: https://www.bbc.com/news/world-us-canada-58208792 -->
     <section class="big-news">
       <div class="big-news-article">
+        <img src="https://images.unsplash.com/photo-1615092296061-e2ccfeb2f3d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" 
+        alt="A forest on fire"> 
         <div>
           <h2>July world's hottest month ever recorded</h2>
           <p>July was the world's hottest month ever recorded, a US federal scientific and regulatory agency has reported.
@@ -64,8 +66,7 @@
             In the Northern Hemisphere, land-surface temperature reached an "unprecedented" 1.54C higher than average, surpassing a previous record set in 2012.
           </p>
         </div>
-          <img src="https://images.unsplash.com/photo-1615092296061-e2ccfeb2f3d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" 
-          alt="A forest on fire"> 
+
       </div>
 
     </section>
@@ -76,12 +77,10 @@
       <div class="news-snippets">
         <img src="https://images.unsplash.com/photo-1629160548610-5e1d4e359e95?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDk2fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
           alt="An infant elephant">
-        <h3>150,000 people evacuated</h3>
+        <h3>150,000 people evacuated from elephant path</h3>
         <p>More than 150,000 people have been evacuated from the path of a herd of migrating elephants, Chinese officials have said.
 
-          Authorities in south-western Yunnan province feared conflict between residents and the 14 Asian elephants which have been on the move for months.
-          
-          More than 25,000 police officers using vehicles and drones have monitored the herd, state media report.</p>
+          Authorities in south-western Yunnan province feared conflict between residents and the 14 Asian elephants which have been on the move for months.</p>
       </div>
 
       <!-- source: https://www.krcu.org/post/fact-check-what-does-fox-actually-say#stream/0 -->
@@ -100,7 +99,7 @@
         <h3>Should we give up flying for the sake of the climate?</h3>
         <p>Everything we do, from the food we eat, products we buy to the way we travel, releases greenhouse gases into the atmosphere, and so has an impact on the planet’s climate. But some activities have a far greater impact than others.
 
-          Around 2.4% of global CO2 emissions come from aviation. Together with other gases and the water vapour trails produced by aircraft, the industry is responsible for around 5% of global warming.</p>
+          Around 2.4% of global CO2 emissions come from aviation.</p>
       </div>
 
       <!-- source: https://www.theguardian.com/science/2021/aug/18/plantwatch-plantwatch-climate-solution-hidden-in-hedgerows -->
@@ -108,9 +107,7 @@
         <img src="https://images.unsplash.com/photo-1625242420602-a22dd7692b82?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDEwfDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
         alt="A landscape with forests and mountains">
         <h3>Plantwatch: a climate solution is hidden in the hedgerows</h3>
-        <p>Hedgerows are hugely important but often taken for granted. They are perhaps the largest semi-natural habitat in Britain, refuges for wild plants and corridors for wildlife to move through, often in barren farmland landscapes.
-
-          Hedgerows help slow down the runoff of water, guarding against flooding and soil erosion, and act as barriers to help prevent pesticide and fertiliser pollution getting into water supplies. Studies show they can improve the quality of air by helping trap air pollution.</p>
+        <p>Hedgerows are hugely important but often taken for granted.  Hedgerows help slow down the runoff of water, guarding against flooding and soil erosion, and act as barriers to help prevent pesticide and fertiliser pollution getting into water supplies. Studies show they can improve the quality of air by helping trap air pollution.</p>
       </div>
 
       <!-- source: https://www.bbc.com/news/business-57397182 -->
@@ -118,11 +115,9 @@
         <img src="https://images.unsplash.com/photo-1629464565884-123b6e6f90c1?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDI2fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
         alt="A bee on a flower">
         <h3>Tech firms use remote monitoring to help honey bees</h3>
-        <p>Beekeeping is one of the oldest industries in existence, but it faces numerous threats. A number of tech firms hope to help the honey bee have a brighter future.
-
-          Noah Wilson-Rich, chief scientific officer of US firm Best Bees Company, says it is distressing how many American honey bee colonies, or hives as they are otherwise known, die off every year.
-          
-          Hit by a deadly parasitic mite, pesticides and climate change, a survey showed that between April 2019 and 2020 43.7% of US hives were lost. That was the second-highest annual figure since that particular study started in 2010.</p>
+        <p>
+          Beekeeping is one of the oldest industries in existence, but it faces numerous threats. A number of tech firms hope to help the honey bee have a brighter future.
+        </p>
       </div>
 
       <!-- source: https://www.nytimes.com/2021/08/23/science/tortoise-eats-bird-video.html -->
@@ -148,15 +143,13 @@
         <img src="https://images.unsplash.com/photo-1611575250341-e8f5c11d9108?ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDk5fDZzTVZqVExTa2VRfHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
         alt="A forest covered in snow">
         <h3>Why cold weather doesn’t mean climate change is fake</h3>
-        <p>A record-breaking cold snap is relentlessly descending on parts of the U.S. this month. It spawned from a split polar vortex that sent cold, Arctic air across the continent.
-
-          In a time when climate change is discussed in the context of record highs, droughts, and wildfires, cold weather and blizzards can seem out of place. For those who deny that climate change is happening, it's an opportunity to undermine scientific consensus.</p>
+        <p> In a time when climate change is discussed in the context of record highs, droughts, and wildfires, cold weather and blizzards can seem out of place. For those who deny that climate change is happening, it's an opportunity to undermine scientific consensus.</p>
       </div>
 
     </section>
 
     <footer>
-
+      <p>Made by Sofia Willebrand 🐘 </p>
     </footer>
   </body>
 </html>
