working on desktop and tablet layouts, added content to the page.

--- a/code/index.html
+++ b/code/index.html
@@ -29,10 +29,6 @@
         <li label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
       </ul>
       <div class="navicons-wrapper">
-        <a href="#" alt="search-icon">
-          <svg class="top-navicons">
-            <use href="#search-icon"></use>
-          </svg></a>
         <a href="#" alt="menu-icon">
           <svg class="top-navicons">
             <use href="#menu-icon"></use>
@@ -91,59 +87,56 @@
 
     <section>
       <div class="news-container news-box">
-        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img class="news-pics"
+        <a href="https://developer.apple.com/design/tips/" target="blank"><img class="news-pics"
+            src="logo-pics/lum3n--RBuQ2PK_L8-unsplash.jpg" alt="desk picture" />
+          <p class="article-text content-spacing">UI design Dos and Don'ts : DevTips from Apple.</p>
+        </a>
+      </div>
+      <div class="news-container news-box">
+        <a href="https://medium.com/diesdas-direct/how-i-became-a-frontend-developer-48a074a6bc72" target="blank"><img
+            class="news-pics" src="logo-pics/ian-schneider-TamMbr4okv4-unsplash.jpg" alt="inspiring picture" />
+          <p class="article-text content-spacing">How I became a Frontend Developer! Leslie B.</p>
+        </a>
+      </div>
+      <div class="news-container news-box">
+        <a href="https://medium.com/quick-code/coolest-25-web-design-trends-in-2021-thatll-rock-the-world-388eb1144b7e"
+          target="blank"><img class="news-pics" src="logo-pics/kevin-o-connor-JxSLigoB-6A-unsplash.jpg"
+            alt="colorful underground picture" />
+          <p class="article-text content-spacing">Coolest 25+ Web Design Trends In 2021!</p>
+        </a>
+      </div>
+      <div class="news-container news-box">
+        <a href="https://dev.to/charissayj/pair-and-mob-programming-best-practices-ef9" target="blank"><img
+            class="news-pics" src="logo-pics/john-schnobrich-2FPjlAyMQTA-unsplash.jpg" alt="team picture" />
+          <p class="article-text content-spacing">Pair and Mob Programming: Best Practices.</p>
+        </a>
+      </div>
+      <div class="news-container news-box">
+        <a href="https://news.mit.edu/topic/machine-learning" target="blank"><img class="news-pics"
+            src="logo-pics/carl-heyerdahl-KE0nC8-58MQ-unsplash.jpg" alt="do more picture" />
+          <p class="article-text content-spacing">Latest news on Machine Learning from MIT!</p>
+        </a>
+      </div>
+      <div class="news-container news-box">
+        <a href="https://www.upgrad.com/blog/data-science-vs-data-analytics/" target="blank"><img class="news-pics"
+            src="logo-pics/adeolu-eletu-unRkg2jH1j0-unsplash.jpg" alt="man picture" />
+          <p class="article-text content-spacing">Data Science Vs Data Analytics.</p>
+        </a>
+      </div>
+      <div class="news-container news-box">
+        <a href="https://www.ft.com/content/41f8dad9-2a17-4789-8203-f6f5683d447b" target="blank"><img class="news-pics"
             src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
+          <p class="article-text content-spacing">Developers rethink the office after corona19.</p>
         </a>
       </div>
       <div class="news-container news-box">
-        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img class="news-pics"
-            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
-        </a>
-      </div>
-      <div class="news-container news-box">
-        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img class="news-pics"
-            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
-        </a>
-      </div>
-      <div class="news-container news-box">
-        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img class="news-pics"
-            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
-        </a>
-      </div>
-      <div class="news-container news-box">
-        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img class="news-pics"
-            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
-        </a>
-      </div>
-      <div class="news-container news-box">
-        <a href="https://demo.getpublii.com/themes/technews/desktop/" target="blank"><img class="news-pics"
-            src="logo-pics/frankie-lg35FkimT30-unsplash.jpg" alt="desk picture" />
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
-        </a>
-      </div>
-      <div class="news-container news-box">
-        <iframe class="iframes" src="https://www.youtube.com/embed/bpVRWrrfM1M" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
-        <a href="https://www.youtube.com/embed/bpVRWrrfM1M" target="blank" alt="resourse link">
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
-        </a>
-      </div>
-      <div class="news-container news-box">
-        <iframe class="iframes" src="https://www.youtube.com/embed/bpVRWrrfM1M" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
-        <a href="https://www.youtube.com/embed/bpVRWrrfM1M" target="blank" alt="resourse link">
-          <p class="article-text content-spacing">Knowing these 6 secrets will make your dekstop look amazing!</p>
+        <a href="https://womenintechsummit.net/" target="blank"><img class="news-pics"
+            src="logo-pics/vonecia-carswell-0aMMMUjiiEQ-unsplash.jpg" alt="woman picture" />
+          <p class="article-text content-spacing">Don't miss Woman in Tech Summit: Fall 2021!</p>
         </a>
       </div>
       <div class="button-container">
-        <button class="subscribe">Subscribe</button>
+        <button class="subscribe">SUBSCRIBE</button>
       </div>
     </section>
   </main>
@@ -158,15 +151,10 @@
     </nav>
   </footer>
 
-  <!-- Changing colors of all svg items on the page. (Going from default black to ability to change color via CSS
+  <!-- Changing colors of all svg items on the page. (Going from default black to an ability to change color via CSS.
       Stackoverflow link for clarifications if needed : https://stackoverflow.com/questions/34225008/how-to-reuse-an-embedded-svg-element-in-the-same-page) -->
   <svg style="display: none" class="top-navicons" role="img" xmlns="http://www.w3.org/2000/svg">
     <defs>
-      <symbol id="search-icon" viewBox="0 0 512 512">
-        <path fill="currentColor"
-          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
-        </path>
-      </symbol>
       <symbol id="menu-icon" viewBox="0 0 448 512">
         <path fill="currentColor"
           d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z">
