add animations, videos and some links

--- a/code/index.html
+++ b/code/index.html
@@ -18,17 +18,16 @@
     </div>
     <nav class="nav-bar">
       <a href="" alt="">Home</a>
-      <a href="" alt="">Latest</a>
+      <a href="#latest" alt="">Latest</a>
       <img class="logo-img" src="/images/logo-n.svg" alt="logo" />
-      <a href="" alt="">Subscribe</a>
+      <a href="#video" alt="">Video</a>
       <a href="mailto: techNews@example.com" target="_blank" alt="email">Contact us</a>
     </nav>
   </header>
 
   <!-- animation -->
-  <section class="animation">
+  <section class="animation one">
     <h1>Subscribe now to Tech News</h1>
-    <img class="logo-img" src="/images/logo-n.svg" alt="logo" />
   </section>
 
   <!-- The big news content -->
@@ -37,20 +36,22 @@
       <a href="https://www.theguardian.com/global/2021/aug/22/how-digital-media-turned-us-all-into-dopamine-addicts-and-what-we-can-do-to-break-the-cycle"
         target="_blank">
         <img src="/images/dopamine-addicts.jpeg" alt="dopamine addicts to tecnology">
-      </a>
     </div>
     <div class="big-text">
-      <a href="https://www.theguardian.com/global/2021/aug/22/how-digital-media-turned-us-all-into-dopamine-addicts-and-what-we-can-do-to-break-the-cycle"
-        target="_blank">
-        <h1>Constant craving: how digital media turned us all into dopamine addicts</h1>
+      <h1>Constant craving: how digital media turned us all into dopamine addicts</h1>
 
-        <p>According to addiction expert Dr Anna Lembke, our smartphones are making us dopamine junkies, with each
-          swipe,
-          like and tweet feeding our habit. So how do we beat our digital dependency?
-        </p>
+      <p>According to addiction expert Dr Anna Lembke, our smartphones are making us dopamine junkies, with each
+        swipe,
+        like and tweet feeding our habit. So how do we beat our digital dependency?
+      </p>
       </a>
     </div>
 
+  </section>
+
+  <!-- animation -->
+  <section class="animation two" id="latest">
+    <h1>Latest news</h1>
   </section>
 
   <!-- The other news  -->
@@ -65,82 +66,128 @@
         <div class="small-text">
           <h2>Audio</h2>
           <h3>OnePlus Buds Pro Price in India Announced, Go on Sale on August 26</h3>
+        </div>
       </a>
     </div>
-    </div>
-    </a>
+
+
     <div class="small-square">
-      <div class="small-img-container">
-        <img class="small-img" src="/images/google-pixel-5.jpeg" alt="android phone">
-      </div>
-      <div class="small-text">
-        <h2>Mobile</h2>
-        <a href="https://www.cnet.com/pictures/google-pixel-5a-with-5g-refines-the-budget-android-phone/"
-          target="_blank">
+      <a href="https://www.cnet.com/pictures/google-pixel-5a-with-5g-refines-the-budget-android-phone/" target="_blank">
+        <div class="small-img-container">
+          <img class="small-img" src="/images/google-pixel-5.jpeg" alt="android phone">
+        </div>
+        <div class="small-text">
+          <h2>Mobile</h2>
           <h3>Google Pixel 5A with 5G refines the budget Android phone</h3>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
+
     <div class="small-square">
-      <div class="small-img-container">
-        <img class="small-img" src="/images/hakers-japan.jpeg" alt="hakers in Japan">
-      </div>
-      <div class="small-text">
-        <h2>Businness</h2>
-        <a href="https://www.bbc.com/news/business-58277359" target="_blank">
+      <a href="https://www.bbc.com/news/business-58277359" target="_blank">
+        <div class="small-img-container">
+          <img class="small-img" src="/images/hakers-japan.jpeg" alt="hakers in Japan">
+        </div>
+        <div class="small-text">
+          <h2>Businness</h2>
           <h3>Hackers steal nearly $100m in Japan crypto heist</h3>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
+
     <div class="small-square">
-      <div class="small-img-container">
-        <img class="small-img" src="/images/jumbo-jet.jpeg" alt="jumbo jet">
-      </div>
-      <div class="small-text">
-        <h2>Environment</h2>
-        <a href="https://www.bbc.com/news/business-57983174" target="_blank">
+      <a href="https://www.bbc.com/news/business-57983174" target="_blank">
+        <div class="small-img-container">
+          <img class="small-img" src="/images/jumbo-jet.jpeg" alt="jumbo jet">
+        </div>
+        <div class="small-text">
+          <h2>Environment</h2>
           <h3>Just how hard is it to recycle a jumbo jet?</h3>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
+
     <div class="small-square">
-      <div class="small-img-container">
-        <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
-      </div>
-      <div class="small-text">
-        <h2>Covid</h2>
-        <a href="https://www.thelocal.se/20210615/its-a-democratic-tool-the-site-that-helps-you-find-a-covid-vaccine-slot-in-sweden/
-          target=" _blank">
+      <a href="https://www.thelocal.se/20210615/its-a-democratic-tool-the-site-that-helps-you-find-a-covid-vaccine-slot-in-sweden/
+                target=" _blank">
+        <div class="small-img-container">
+          <img class="small-img" src="/images/covid.jpeg" alt="covid vaccinne">
+        </div>
+        <div class="small-text">
+          <h2>Covid</h2>
           <h3>‘It’s a democratic tool’: The site that helps you find a Covid vaccine slot in Sweden</h3>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
+
     <div class="small-square">
-      <div class="small-img-container">
-        <img class="small-img" src="/images/robot-humanoid.png" alt="robot humanoid">
-      </div>
-      <div class="small-text">
-        <h2>Robot</h2>
-        <a href="https://www.newscientist.com/article/2287792-tesla-is-building-an-ai-humanoid-robot-called-optimus-says-elon-musk/"
-          target="_blank">
+      <a href="https://www.newscientist.com/article/2287792-tesla-is-building-an-ai-humanoid-robot-called-optimus-says-elon-musk/"
+        target="_blank">
+        <div class="small-img-container">
+          <img class="small-img" src="/images/robot-humanoid.png" alt="robot humanoid">
+        </div>
+        <div class="small-text">
+          <h2>Robot</h2>
           <h3>Tesla is building an AI humanoid robot called Optimus, says Elon Musk</h3>
-        </a>
+        </div>
+      </a>
+    </div>
+
+    <div class="small-square">
+      <a href="https://www.computerworld.com/article/3630408/facebook-promises-immersive-vr-meetings-with-horizon-workrooms.html"
+        target="_blank">
+        <div class="small-img-container">
+          <img class="small-img" src="/images/facebook-horizon-workrooms.jpeg" alt="horizontal workrooms">
+        </div>
+        <div class="small-text">
+          <h2>Virtual Reality</h2>
+          <h3>Facebook promises immersive VR meetings with Horizon Workrooms</h3>
+        </div>
+      </a>
+    </div>
+  </section>
+
+  <!-- animation -->
+  <section class="animation three" id="video">
+    <h1>More news on video</h1>
+  </section>
+
+
+  <!-- video -->
+  <section class=video>
+    <div class="video-card">
+      <iframe class="video-frame" src="https://www.youtube.com/embed/pWWOEcd7f6k" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      <div class="video-text">
+        <h2>Top Future Technologies In 2021</h2>
+        <p>Thanks to Simplilearn</p>
       </div>
     </div>
-    <div class="small-square">
-      <div class="small-img-container">
-        <img class="small-img" src="/images/facebook-horizon-workrooms.jpeg" alt="horizontal workrooms">
+
+    <div class="video-card">
+      <iframe class="video-frame" src="https://www.youtube.com/embed/RawWGB2z9cY" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      <div class="video-text">
+        <h2>The secret of Atlas | Boston Dynamics' robot Atlas</h2>
+        <p>Thanks to Pro Robots</p>
       </div>
-      <div class="small-text">
-        <h2>Virtual Reality</h2>
-        <a href="https://www.computerworld.com/article/3630408/facebook-promises-immersive-vr-meetings-with-horizon-workrooms.html"
-          target="_blank">
-          <h3>Facebook promises immersive VR meetings with Horizon Workrooms</h3>
-        </a>
+    </div>
+
+    <div class="video-card">
+      <iframe class="video-frame" src="https://www.youtube.com/embed/KGyCjYnet_s" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+      <div class="video-text">
+        <h2>The Middle East's first quantum computer! </h2>
+        <p>Thanks to Carrington Malin - Marketing</p>
       </div>
     </div>
 
   </section>
+
+
   <footer>
     <p>Stockholm, Sweden. 2021</p>
   </footer>
