added header and navbar

--- a/code/index.html
+++ b/code/index.html
@@ -3,21 +3,35 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>Westeros News</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" href="https://img.icons8.com/windows/452/game-of-thrones.png" type="image" size="any">
 </head>
 
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
+    <div class="header">
+      <h1>Westeros News</h1>
+      <p>Game of Thrones</p>
+    </div>
+
+    <div class="menu">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
   </header>
 
   <section class="big-news">
     <!-- The big news content -->
   </section>
 
-  <section class="">
+  <section class="Small-news">
     <!-- The other news  -->
   </section>
 </body>
