added images to folder. started working on layout and styling with flexbox and grid

--- a/code/index.html
+++ b/code/index.html
@@ -5,18 +5,51 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
+      <img class="logo" 
+      src="./logo.svg" 
+      alt="Technigo">
+      <nav class="navigation">
+        <a href="#">Big news  </a>
+        <a href="#">Small news  </a>
+        <!-- change navbar -->
+      </nav>
     </header>
-
-    <section class="big-news">
+    <section class="big-container">
+      <section class="big-news">
       <!-- The big news content -->
-    </section>
+        <div>
+        <img class="sushi" src="./Sushi.jpg" alt="Picture of sushi"> 
+        <h2>New trend on the rise: Sushi meets Swedish Fika</h2>
+        <h3>- Inventor calls it Fishi</h3>
+          <p class="text">Lemon drops macaroon oat cake sugar plum shortbread caramels candy candy marshmallow. Pudding cake carrot cake bonbon jujubes. Liquorice carrot cake tiramisu cotton candy oat cake jelly beans jelly. Powder chocolate tiramisu topping cookie sweet roll liquorice soufflé marzipan. Caramels carrot cake candy sweet marshmallow. Carrot cake cotton candy icing sugar plum candy canes cake gingerbread croissant gummi bears. Sugar plum fruitcake cake sugar plum cake jelly-o sweet roll marshmallow sweet. Lemon drops dessert cheesecake biscuit croissant. Toffee ice cream sugar plum jelly halvah gingerbread topping.
+          </p>
+        </div>
+      </section>
 
-    <section class="">
+    <section class="other-news">
+
       <!-- The other news  -->
+      <div class="box first">
+        <img class="image-other" src="./biscuit-basket.jpg" alt="Biscuit in a basket">
+        <p> Cupcake ipsum dolor sit amet candy liquorice marzipan. Muffin carrot cake dragée donut powder dessert biscuit. Pudding chocolate cheesecake jelly halvah marzipan chupa chups topping croissant. Dragée cookie jujubes jujubes topping.
+        </p>
+        </div>
+      <div class="box second"> Gummies jelly beans cheesecake marshmallow pie sweet roll bonbon. Jelly gingerbread chocolate lollipop apple pie marshmallow macaroon. Cotton candy marzipan tootsie roll oat cake sweet roll macaroon jelly-o. Jelly tart jelly-o chupa chups biscuit jelly dragée pie.
+      </div>
+      <div class="box third"> Sugar plum caramels pudding donut chocolate bar tiramisu. Donut pudding bonbon liquorice pie carrot cake cotton candy carrot cake cake. Topping cupcake lemon drops bear claw gummi bears biscuit tart macaroon pie. Croissant cake biscuit lollipop danish cake ice cream tiramisu.
+      </div>
+      <div class="box forth">  Sesame snaps jelly-o lemon drops cheesecake fruitcake ice cream bonbon gummies. Carrot cake fruitcake oat cake fruitcake chocolate cake toffee. Carrot cake gummies oat cake pastry pastry.
+      </div>
+      <div class="box fifth"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
+      <div class="box sixth"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
+      <div class="box seventh"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
+      <div class="box eighth"> Apple pie halvah pastry cheesecake toffee chocolate cake sweet roll. Cake icing jelly marzipan cupcake. Pie lemon drops lollipop halvah biscuit cheesecake jelly-o. Tiramisu gingerbread topping wafer lemon drops carrot cake jelly beans halvah.</div>
     </section>
+  </section>
   </body>
 </html>
