cleared some crap code and other minor stuff

--- a/code/index.html
+++ b/code/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="https://picsum.photos/10/10">
+    <link rel="icon" href="./news.png">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
       <nav> 
-        <img class="logo" src="https://picsum.photos/100/100" alt="logo"/>
-        <h1 class="site-name">The News Site</h1>
+        <img class="logo" src="./news.png" alt="logo"/>
+        <h1 class="site-name">The Generic News Site</h1>
         <div class ="navigation" id="navigation-id">
           <ul>
             <li><a href="#">Big News</a></li>
