changed the font and the loggo

--- a/code/index.html
+++ b/code/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:wght@300&family=Pacifico&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Six+Caps&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
@@ -14,12 +15,12 @@
     <!--test-->
     <header>
       <!-- Some kind of logo and navbar -->
-      <a class="logo" href="#small-news-section"><img src="./img/apple.svg" alt="apple-logo" /></a>
+      <a class="logo" href="#small-news-section"><img src="./img/newspaper.png" alt="apple-logo" /></a>
       <h1 class="site-name">Old News</h1>
       <nav>
        <a class="link" id="one" href="#home">Home</a>
        <a class="link" id="two" href="#About">About</a>
-       <a class="tablet-logo" href="#small-news-section"><img src="./img/apple.svg" alt="apple-logo" /></a>
+       <a class="tablet-logo" href="#small-news-section"><img src="./img/newspaper.png" alt="apple-logo" /></a>
        <a class="link" id="thre" href="#Contact">Contact</a>
        <a class="link" id="four" href="#Login">Log in</a>  
        </nav> 
