fixed header for mobile version, nav not included

--- a/code/index.html
+++ b/code/index.html
@@ -9,22 +9,20 @@
 </head>
 
 <body> 
-  <header>
+  <header class="site-header">
     <!-- banner, logo and nav -->
-    <div class="site-header">
-      <div class="site-header-inner">
-        <div class="site-header-top">
-          <!-- logo -->
-           <a href="" class="site-header-logo">
-            <img src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZnVubnklMjBpY29ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
-            alt="header-image" 
-            class="site-header-image">
-            <h1 class="site-header-name">The Fake News Site</h1>
-          </a>
-          <h2 class="site-header-slogan">Your <span>no. 1</span> fake news source</h2>
-        </div>
-        <!-- <nav class="site-header-nav"></nav> -->
+    <div class="site-header-inner">
+      <div class="site-header-top">
+        <!-- logo -->
+        <a href="" class="site-header-logo">
+          <img src="https://images.unsplash.com/photo-1526297003708-f5a1c2c9c6e7?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZnVubnklMjBpY29ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+          alt="smiley" 
+          class="site-header-image">
+          <h1 class="site-header-name">The Fake News Site</h1>
+        </a>
+        <h2 class="site-header-slogan">Your <span>no. 1</span> fake news source</h2>
       </div>
+      <!-- <nav class="site-header-nav"></nav> -->
     </div>
   </header>
 
