Changed font+margin, added boxshadow

--- a/code/index.html
+++ b/code/index.html
@@ -19,7 +19,7 @@
           <ul>
             <li><a href="#">Big News</a></li>
             <li><a href="#">Small News</a></li>
-            <li><a href="#">Archive</a></li>
+            <!-- <li><a href="#">Archive</a></li> -->
             <li><a href="#">Contact</a></li>
           </ul>
         </div>
